--- a/index.css
+++ b/index.css
@@ -1,1 +1,12 @@
-
+video{
+    position:relative;
+    display:block;
+    width:100%; 
+  }
+  .float-right{
+    position:absolute;
+  }
+  h2{
+    top:80px;
+    right:0;
+  }
